# qc-devcfg-parser

./: .gitignore  CMakeLists.txt
include/: compatible.h  construct.h  defines.h  devcfg.h  io.h  language.h  list.h  str.h
po/: CMakeLists.txt  en_US.po  languages.c  zh_CN.po
res/: qt.qrc
src/: CMakeLists.txt  incbin.s.in
src/cli/: CMakeLists.txt  main.c
src/devcfg/: CMakeLists.txt  devcfg.c  device.c  dump.c  internal.h  io.c  loader.c  prop.c  section.c  target.c  value.c
src/lib/: CMakeLists.txt  constructor.c  io.c  language.c  list.c  log.c  memdup.c  regexp.c  snlprintf.c  str.c  strlcat.c  strlcpy.c  strndup.c  vsnlprintf.c
src/qt/: CMakeLists.txt  about.cpp  about.h  log.cpp  log.h  main.cpp  modes.cpp  modes.h  parser.cpp  parser.h  parser_events.cpp  parser_gui.cpp  parser_list.cpp  parser_value.cpp  struct.cpp  struct.h
src/struct/: CMakeLists.txt  i2c_config.c  internal.h  pmic.c  struct.c
